Merge module2-lesson5: keep newly built Jira Lite implementation
Resolved merge conflicts in favor of the freshly built code base
(domain + repos + security + services + controllers + DTOs +
integration tests) which has been verified against `mvn checkstyle:check`
(0 violations) and `mvn test` (27/27 passing).

Dropped the other branch's TaskTransitionService.java (superseded by
TaskTransitionValidator) and unused cleanup.sql.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>