@@ -10,56 +10,74 @@ import com.baeldung.jiralite.exception.ForbiddenException;
 import com.baeldung.jiralite.exception.ResourceNotFoundException;
 import com.baeldung.jiralite.repository.CommentRepository;
 import com.baeldung.jiralite.repository.TaskRepository;
+import java.time.Instant;
 import java.util.List;
-import org.springframework.beans.factory.annotation.Autowired;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class CommentService {
 
-    private static final String ENTITY_TYPE = "TASK";
+    private final CommentRepository commentRepository;
 
-    @Autowired
-    private CommentRepository commentRepo;
+    private final TaskRepository taskRepository;
 
-    @Autowired
-    private TaskRepository taskRepo;
+    private final CurrentUserService currentUserService;
 
-    @Autowired
-    private AuditLogService auditLogService;
+    private final AuditLogService auditLogService;
+
+    public CommentService(CommentRepository commentRepository,
+            TaskRepository taskRepository,
+            CurrentUserService currentUserService,
+            AuditLogService auditLogService) {
+        this.commentRepository = commentRepository;
+        this.taskRepository = taskRepository;
+        this.currentUserService = currentUserService;
+        this.auditLogService = auditLogService;
+    }
 
     @Transactional
-    public CommentResponse addComment(Long taskId, CommentRequest request, User actor) {
-        Task task = taskRepo.findById(taskId)
-            .orElseThrow(() -> new ResourceNotFoundException("Task not found"));
-        boolean isMember = task.getProject().getMembers().stream()
-            .anyMatch(m -> m.getId().equals(actor.getId()));
+    public CommentResponse addComment(Long taskId, CommentRequest request) {
+        User caller = currentUserService.getCurrentUser();
+        Task task = findTask(taskId);
+        boolean isMember = caller.getProjects().stream()
+            .anyMatch(p -> p.getId().equals(task.getProject().getId()));
         if (!isMember) {
-            throw new ForbiddenException("Only project members can comment");
+            throw new ForbiddenException("You are not a member of this project");
         }
         Comment comment = new Comment();
         comment.setTask(task);
-        comment.setAuthor(actor);
-        comment.setBody(request.body());
-        commentRepo.save(comment);
-        auditLogService.log(AuditEventType.COMMENT_ADDED, actor, ENTITY_TYPE, taskId, task.getProject());
+        comment.setAuthor(caller);
+        comment.setBody(request.getBody());
+        comment.setCreatedAt(Instant.now());
+        commentRepository.save(comment);
+        auditLogService.record(AuditEventType.COMMENT_ADDED, caller,
+            task.getProject().getId(), task.getId(),
+            "Comment added by " + caller.getUsername());
         return toResponse(comment);
     }
 
     @Transactional(readOnly = true)
     public List<CommentResponse> listComments(Long taskId) {
-        return commentRepo.findByTaskIdOrderByCreatedAtAsc(taskId)
-            .stream().map(this::toResponse).toList();
+        return commentRepository.findByTaskIdOrderByCreatedAtAsc(taskId)
+            .stream()
+            .map(this::toResponse)
+            .collect(Collectors.toList());
+    }
+
+    private Task findTask(Long taskId) {
+        return taskRepository.findById(taskId)
+            .orElseThrow(() -> new ResourceNotFoundException("Task not found: " + taskId));
     }
 
     private CommentResponse toResponse(Comment comment) {
-        CommentResponse r = new CommentResponse();
-        r.setId(comment.getId());
-        r.setTaskId(comment.getTask().getId());
-        r.setAuthorUsername(comment.getAuthor().getUsername());
-        r.setBody(comment.getBody());
-        r.setCreatedAt(comment.getCreatedAt());
-        return r;
+        return new CommentResponse(
+            comment.getId(),
+            comment.getTask().getId(),
+            comment.getAuthor().getId(),
+            comment.getBody(),
+            comment.getCreatedAt()
+        );
     }
 }
