@@ -3,74 +3,93 @@ package com.baeldung.jiralite.service;
 import com.baeldung.jiralite.domain.AuditEventType;
 import com.baeldung.jiralite.domain.Project;
 import com.baeldung.jiralite.domain.User;
-import com.baeldung.jiralite.dto.AddMemberRequest;
 import com.baeldung.jiralite.dto.ProjectRequest;
 import com.baeldung.jiralite.dto.ProjectResponse;
 import com.baeldung.jiralite.exception.ResourceNotFoundException;
 import com.baeldung.jiralite.repository.ProjectRepository;
 import com.baeldung.jiralite.repository.UserRepository;
 import java.util.List;
-import org.springframework.beans.factory.annotation.Autowired;
+import java.util.Set;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class ProjectService {
 
-    private static final String ENTITY_PROJECT = "PROJECT";
-    private static final String PROJECT_NOT_FOUND = "Project not found";
+    private final ProjectRepository projectRepository;
 
-    @Autowired
-    private ProjectRepository projectRepo;
+    private final UserRepository userRepository;
 
-    @Autowired
-    private UserRepository userRepo;
+    private final CurrentUserService currentUserService;
 
-    @Autowired
-    private AuditLogService auditLogService;
+    private final AuditLogService auditLogService;
+
+    public ProjectService(ProjectRepository projectRepository,
+            UserRepository userRepository,
+            CurrentUserService currentUserService,
+            AuditLogService auditLogService) {
+        this.projectRepository = projectRepository;
+        this.userRepository = userRepository;
+        this.currentUserService = currentUserService;
+        this.auditLogService = auditLogService;
+    }
 
     @Transactional
-    public ProjectResponse createProject(ProjectRequest request, User actor) {
+    public ProjectResponse createProject(ProjectRequest request) {
+        User caller = currentUserService.getCurrentUser();
         Project project = new Project();
-        project.setName(request.name());
-        project.setDescription(request.description());
-        project.getMembers().add(actor);
-        projectRepo.save(project);
-        auditLogService.log(AuditEventType.PROJECT_CREATED, actor, ENTITY_PROJECT, project.getId(), project);
+        project.setName(request.getName());
+        project.setDescription(request.getDescription());
+        projectRepository.save(project);
+        caller.getProjects().add(project);
+        userRepository.save(caller);
+        auditLogService.record(AuditEventType.PROJECT_CREATED, caller, project.getId(), null,
+            "Project created: " + project.getName());
         return toResponse(project);
     }
 
     @Transactional(readOnly = true)
     public List<ProjectResponse> listProjects() {
-        return projectRepo.findAll().stream().map(this::toResponse).toList();
+        return projectRepository.findAll().stream()
+            .map(this::toResponse)
+            .collect(Collectors.toList());
     }
 
     @Transactional
-    public ProjectResponse addMember(Long projectId, AddMemberRequest request, User actor) {
+    public ProjectResponse addMember(Long projectId, Long userId) {
+        User caller = currentUserService.getCurrentUser();
         Project project = findProject(projectId);
-        User user = userRepo.findById(request.userId())
-            .orElseThrow(() -> new ResourceNotFoundException("User not found"));
-        project.getMembers().add(user);
-        projectRepo.save(project);
-        auditLogService.log(AuditEventType.MEMBER_ADDED, actor, ENTITY_PROJECT, projectId, project);
+        User newMember = userRepository.findById(userId)
+            .orElseThrow(() -> new ResourceNotFoundException("User not found: " + userId));
+        newMember.getProjects().add(project);
+        userRepository.save(newMember);
+        auditLogService.record(AuditEventType.MEMBER_ADDED, caller, projectId, null,
+            "User " + newMember.getUsername() + " added to project " + project.getName());
         return toResponse(project);
     }
 
     @Transactional
-    public void removeMember(Long projectId, Long userId, User actor) {
+    public void removeMember(Long projectId, Long userId) {
+        User caller = currentUserService.getCurrentUser();
         Project project = findProject(projectId);
-        project.getMembers().removeIf(m -> m.getId().equals(userId));
-        projectRepo.save(project);
-        auditLogService.log(AuditEventType.MEMBER_REMOVED, actor, ENTITY_PROJECT, projectId, project);
+        User member = userRepository.findById(userId)
+            .orElseThrow(() -> new ResourceNotFoundException("User not found: " + userId));
+        member.getProjects().remove(project);
+        userRepository.save(member);
+        auditLogService.record(AuditEventType.MEMBER_REMOVED, caller, projectId, null,
+            "User " + member.getUsername() + " removed from project " + project.getName());
     }
 
     private Project findProject(Long projectId) {
-        return projectRepo.findById(projectId)
-            .orElseThrow(() -> new ResourceNotFoundException(PROJECT_NOT_FOUND));
+        return projectRepository.findById(projectId)
+            .orElseThrow(() -> new ResourceNotFoundException("Project not found: " + projectId));
     }
 
     private ProjectResponse toResponse(Project project) {
-        List<Long> memberIds = project.getMembers().stream().map(User::getId).toList();
+        Set<Long> memberIds = project.getMembers().stream()
+            .map(User::getId)
+            .collect(Collectors.toSet());
         return new ProjectResponse(project.getId(), project.getName(), project.getDescription(), memberIds);
     }
 }
