@@ -1,48 +1,49 @@
 package com.baeldung.jiralite.service;
 
 import com.baeldung.jiralite.domain.AuditEventType;
-import com.baeldung.jiralite.domain.Role;
 import com.baeldung.jiralite.domain.User;
-import com.baeldung.jiralite.dto.ChangeRoleRequest;
 import com.baeldung.jiralite.dto.UserResponse;
-import com.baeldung.jiralite.exception.ForbiddenException;
 import com.baeldung.jiralite.exception.ResourceNotFoundException;
 import com.baeldung.jiralite.repository.UserRepository;
 import java.util.List;
-import org.springframework.beans.factory.annotation.Autowired;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class UserService {
 
-    private static final String ENTITY_USER = "USER";
+    private final UserRepository userRepository;
 
-    @Autowired
-    private UserRepository userRepo;
+    private final CurrentUserService currentUserService;
 
-    @Autowired
-    private AuditLogService auditLogService;
+    private final AuditLogService auditLogService;
+
+    public UserService(UserRepository userRepository,
+            CurrentUserService currentUserService,
+            AuditLogService auditLogService) {
+        this.userRepository = userRepository;
+        this.currentUserService = currentUserService;
+        this.auditLogService = auditLogService;
+    }
 
     @Transactional(readOnly = true)
     public List<UserResponse> listUsers() {
-        return userRepo.findAll().stream().map(this::toResponse).toList();
+        return userRepository.findAll().stream()
+            .map(u -> new UserResponse(u.getId(), u.getUsername(), u.getRole()))
+            .collect(Collectors.toList());
     }
 
     @Transactional
-    public UserResponse changeRole(Long userId, ChangeRoleRequest request, User actor) {
-        if (actor.getRole() != Role.ADMIN) {
-            throw new ForbiddenException("Only admins can change roles");
-        }
-        User user = userRepo.findById(userId)
-            .orElseThrow(() -> new ResourceNotFoundException("User not found"));
-        user.setRole(request.role());
-        userRepo.save(user);
-        auditLogService.log(AuditEventType.USER_ROLE_CHANGED, actor, ENTITY_USER, userId, null);
-        return toResponse(user);
-    }
-
-    private UserResponse toResponse(User user) {
-        return new UserResponse(user.getId(), user.getUsername(), user.getRole());
+    public UserResponse changeRole(Long targetUserId, com.baeldung.jiralite.domain.Role newRole) {
+        User caller = currentUserService.getCurrentUser();
+        RoleChecker.requireAdmin(caller);
+        User target = userRepository.findById(targetUserId)
+            .orElseThrow(() -> new ResourceNotFoundException("User not found: " + targetUserId));
+        target.setRole(newRole);
+        userRepository.save(target);
+        auditLogService.record(AuditEventType.ROLE_CHANGED, caller, null, null,
+            "User " + target.getUsername() + " role changed to " + newRole);
+        return new UserResponse(target.getId(), target.getUsername(), target.getRole());
     }
 }
